# afore

./: CMakeLists.txt  main.cpp  tuple_test_main.cpp
include/: afore.h
include/afore/: concepts.h  core.h  macros.h  modules.h  primitives.h  unit_tests.h  utils.h
include/afore/algorithm/: algorithm.h  append.h  compare.h  find.h  foreach.h  group.h  reduce.h  scatter_gather.h  sort.h  tie.h  unique.h
include/afore/data_structure/: tree.h  tuple.h
include/afore/detail/: function.inl  primitives.inl  stl.inl
include/afore/function/: decl.h  def.h  function.h  functors.h  operators.h
include/afore/string/: nameof.h  regex.h  string.h
include/afore/unit_tests/: concepts.inl  function.inl
